--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,13 +1,24 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Angular 2 App | ng2-webpack</title>
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+<head>
+  <meta charset="utf-8">
+  <title>IoT Demo Application</title>
 
-    <base href="/">
-  </head>
-  <body>
-    <my-app>Loading...</my-app>
-  </body>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/png" href="./img/favicon.png">
+  <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
+</head>
+<body>
+  <ngx-app>Loading...</ngx-app>
+
+  <div id="nb-global-spinner" class="spinner">
+    <div class="blob blob-0"></div>
+    <div class="blob blob-1"></div>
+    <div class="blob blob-2"></div>
+    <div class="blob blob-3"></div>
+    <div class="blob blob-4"></div>
+    <div class="blob blob-5"></div>
+  </div>
+
+</body>
 </html>
